# puzzles

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  __main__.py  solution.py
calculating-with-functions/: README.md  solution.py
chained-sum/: README.md  solution.py
data/: in.txt
huffman-coding/: CMakeLists.txt  README.md  huffman-coding.cpp  huffman.hpp  unit-tests.cpp
print-trees/: __main__.py  solution.py
shuffle/: README.md  solution.py
